--- a/src/projetIHM/gestionMairieBundle/Resources/views/Personne/ajouterPersonne.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Personne/ajouterPersonne.html.twig
@@ -25,7 +25,7 @@
           <h3>Accueil</h3>
           <ul class="nav nav-pills nav-stacked">
             <li><a href="{{path('gestion_mairie_homepage')}}">Accueil du Site</a></li>
-            <li><a href="{{path('gestion_mairie_ajouterPersonne')}}">Ajouter une personne</a></li>
+            <li><a href="{{path('gestion_mairie_personne')}}">Gerer les personnes</a></li>
           </ul>
           
           
