>>> BETA <<< _suppression du dossier bootstrap inutile _creation de la gestion de mariage 	+ bdd 	+ formulaire Type

--- a/src/projetIHM/gestionMairieBundle/Resources/views/Mariage/ajouterMariage.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Mariage/ajouterMariage.html.twig
@@ -5,7 +5,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>AJOUTER PERSONNE</title>
+    <title>AJOUTER UN MARIAGE</title>
 
 
     <link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/bootstrap/css/bootstrap.css') }}" type="text/css" />
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <div id="header" class="hero-unit">
-        <h1>Ajouter une personne</h1>
+        <h1>Ajouter un mariage</h1>
         <p>Déstiné aux mairie afin de gerer les personnes.</p>
       </div>
 
