--- a/src/projetIHM/gestionMairieBundle/Resources/views/Accueil/index.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Accueil/index.html.twig
@@ -26,7 +26,7 @@
           <ul class="nav nav-pills nav-stacked">
             <li><a href="{{path('gestion_mairie_homepage')}}">Accueil du Site</a></li>
             <li><a href="{{path('gestion_mairie_personne')}}">Gerer les personnes</a></li>
-	    <li><a href="{{path('gestion_mairie_ajouterMariage')}}">ajouter un mariage</a></li>
+	    <li><a href="{{path('gestion_mairie_mariage')}}">Gérer les mariages</a></li>
           </ul>
           
           
