--- a/src/projetIHM/gestionMairieBundle/Resources/views/Personne/modifierPersonne.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Personne/modifierPersonne.html.twig
@@ -21,7 +21,7 @@
       </div>
 
       <div class="row">
-        <div id="menu" class="span4">
+        <div id="menu" class="span3" style="background-color:rgb(238,238,238);padding-left:2%;">
           <h3>Accueil</h3>
           <ul class="nav nav-pills nav-stacked">
             <li><a href="{{path('gestion_mairie_homepage')}}">Accueil du Site</a></li>
@@ -36,6 +36,19 @@
 	  <h3>Formulaire d'article</h3>
 	  <div class="well">
 	    <form method="post" {{ form_enctype(form) }}>
+
+
+<div>
+  {# Génération du label. #}
+  {{ form_label(form.nsecu, "Nsecu") }}
+
+  {# Affichage des erreurs pour ce champ précis. #}
+  {{ form_errors(form.nsecu) }}
+
+  {# Génération de l'input. #}
+  {{ form_widget(form.nsecu,{value : personne.nsecu} ) }}
+<div>
+
 
 <div>
   {# Génération du label. #}
@@ -59,6 +72,47 @@
   {# Génération de l'input. #}
   {{ form_widget(form.prenom,{value : personne.prenom} ) }}
 <div>
+
+
+<div>
+  {# Génération du label. #}
+  {{ form_label(form.dateNai, "Date de Naissance") }}
+
+  {# Affichage des erreurs pour ce champ précis. #}
+  {{ form_errors(form.dateNai) }}
+
+  {# Génération de l'input. #}
+  {{ form_widget(form.dateNai,{value : personne.dateNai} ) }}
+<div>
+
+
+<div>
+  {# Génération du label. #}
+  {{ form_label(form.villeNai, "Ville de Naissance") }}
+
+  {# Affichage des erreurs pour ce champ précis. #}
+  {{ form_errors(form.villeNai) }}
+
+  {# Génération de l'input. #}
+  {{ form_widget(form.villeNai,{value : personne.villeNai} ) }}
+<div>
+
+
+<div>
+  {# Génération du label. #}
+  {{ form_label(form.sexe, "Sexe") }}
+
+  {# Affichage des erreurs pour ce champ précis. #}
+  {{ form_errors(form.sexe) }}
+
+  {# Génération de l'input. #}
+  {{ form_widget(form.sexe,{value : personne.sexe} ) }}
+<div>
+
+
+
+
+{# form_widget(form)#}
 
 	      <input type="submit" class="btn btn-primary" />
 	    </form>
