>>> BETA <<< _ Modifier personne : Done _ gestion Mariage _ mise en place d'un layout (base + header).

--- a/src/projetIHM/gestionMairieBundle/Resources/views/Personne/modifierPersonne.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Personne/modifierPersonne.html.twig
@@ -35,7 +35,7 @@
           {% block body %}
 	  <h3>Formulaire d'article</h3>
 	  <div class="well">
-	    <form method="post" {{ form_enctype(form) }}>
+	    <form method="GET" {{ form_enctype(form) }}>
 
 
 <div>
