--- a/src/projetIHM/gestionMairieBundle/Resources/views/Accueil/index.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Accueil/index.html.twig
@@ -12,7 +12,7 @@
 
 
   </head>
-
+  {% block body %}
   <body>
     <div class="container">
       <div id="header" class="hero-unit">
@@ -33,9 +33,9 @@
         </div>
       
 	<div id="content" class="span8">
-          {% block body %}
-	  Salut Bobby
-          {% endblock %}
+
+
+SALUT
         </div>
       </div>
 
@@ -47,4 +47,5 @@
     </div>
 
   </body>
+          {% endblock %}
 </html>
