>>> BETA <<< _gestion des Mariages : done _create de la gestion de logement         -entity         -Controller         -ajouter : done         -lister : done

--- a/src/projetIHM/gestionMairieBundle/Resources/views/Accueil/index.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Accueil/index.html.twig
@@ -27,6 +27,7 @@
             <li><a href="{{path('gestion_mairie_homepage')}}">Accueil du Site</a></li>
             <li><a href="{{path('gestion_mairie_personne')}}">Gerer les personnes</a></li>
 	    <li><a href="{{path('gestion_mairie_mariage')}}">Gérer les mariages</a></li>
+	    <li><a href="{{path('gestion_mairie_logement')}}">Gérer les logements</a></li>
           </ul>
           
           
