--- a/src/projetIHM/gestionMairieBundle/Resources/views/Logement/ajouterLogement.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Logement/ajouterLogement.html.twig
@@ -5,15 +5,10 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>LES MARIAGES</title>
+    <title>AJOUTER LOGEMENT</title>
 
 
     <link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/bootstrap/css/bootstrap.css') }}" type="text/css" />
-
-
-
-    <link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/stylesheet.css') }}" type="text/css" />
-
 
 
   </head>
@@ -21,35 +16,31 @@
   <body>
     <div class="container">
       <div id="header" class="hero-unit">
-        <h1>Liste des mariages</h1>
+        <h1>Ajouter un logement</h1>
         <p>Déstiné aux mairie afin de gerer les personnes.</p>
       </div>
 
       <div class="row">
-        <div id="menu" class="span4">
+        <div id="menu" class="span3" style="background-color:rgb(238,238,238);padding-left:2%;">
           <h3>Accueil</h3>
           <ul class="nav nav-pills nav-stacked">
             <li><a href="{{path('gestion_mairie_homepage')}}">Accueil du Site</a></li>
-            <li><a href="{{path('gestion_mairie_ajouterMariage')}}">Ajouter un mariage</a></li>
-	  </ul>
+            <li><a href="{{path('gestion_mairie_logement')}}">Gerer les logements</a></li>
+          </ul>
           
           
         </div>
-	
+      
 	<div id="content" class="span8">
           {% block body %}
-          {% for mariage in mariages %}
-	  <table>
-	    <tr><td>{{mariage.numSecu1 }} marié avec {{ mariage.numSecu2 }} le {{ mariage.dateMariage|date('Y-m-d') }} à {{ mariage.villeMairie }}</td><td></br>
-<td></br><form action="{{ path('gestion_mairie_supprimerMariage', {'id': mariage.id}) }}" method="POST">
-		  <input type="submit" value="Divorcer" class="btn btn-danger" />
-   		</form>  
-		
-	    </td></tr>
-	  </table>
-	  {% endfor %}
-
-	  {% endblock %}
+	  <h3>Formulaire d'article</h3>
+	  <div class="well">
+	    <form method="post" {{ form_enctype(form) }}>
+	      {{ form_widget(form) }}
+	      <input type="submit" class="btn btn-primary" />
+	    </form>
+	  </div>
+          {% endblock %}
         </div>
       </div>
 
