--- a/src/projetIHM/gestionMairieBundle/Resources/views/base.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/base.html.twig
@@ -7,7 +7,11 @@
     <title>{% block title %}Test Application{% endblock %}</title>
   </head>
 
+
+<body>
 {% block body %}{% endblock %}
+</body>
+
 </html>
 
 
