--- a/src/projetIHM/gestionMairieBundle/Resources/views/base.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/base.html.twig
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+
+    <link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/stylesheet.css') }}" type="text/css" />
+
+
     <link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/bootstrap/css/bootstrap.css') }}" type="text/css" />
     <link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/stylesheet.css') }}" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
