--- a/src/projetIHM/gestionMairieBundle/Resources/views/Accueil/index.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Accueil/index.html.twig
@@ -7,11 +7,13 @@
 
     <title>Gestion de l'état civil</title>
 
+    <link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/stylesheet.css') }}" type="text/css" />
 
     <link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/bootstrap/css/bootstrap.css') }}" type="text/css" />
 
 
   </head>
+
   {% block body %}
   <body>
     <div class="container">
@@ -21,14 +23,14 @@
       </div>
 
       <div class="row">
-        <div id="menu" class="span4">
+        <div id="menu" class="span3">
           <h3>Accueil</h3>
           <ul class="nav nav-pills nav-stacked">
             <li><a href="{{path('gestion_mairie_homepage')}}">Accueil du Site</a></li>
             <li><a href="{{path('gestion_mairie_personne')}}">Gerer les personnes</a></li>
 	    <li><a href="{{path('gestion_mairie_mariage')}}">Gérer les mariages</a></li>
 	    <li><a href="{{path('gestion_mairie_logement')}}">Gérer les logements</a></li>
-	    <li><a href="{{path('gestion_mairie_habite')}}">Gérer les emménagements/déménagements</a></li>
+	    <li><a href="{{path('gestion_mairie_habite')}}">Gérer les em(dé)ménagements</a></li>
           </ul>
           
           
