--- a/src/projetIHM/gestionMairieBundle/Resources/views/Personne/ajouterPersonne.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Personne/ajouterPersonne.html.twig
@@ -21,7 +21,7 @@
       </div>
 
       <div class="row">
-        <div id="menu" class="span3" style="background-color:rgb(238,238,238);padding-left:2%;">
+        <div id="menu" class="span3">
           <h3>Accueil</h3>
           <ul class="nav nav-pills nav-stacked">
             <li><a href="{{path('gestion_mairie_homepage')}}">Accueil du Site</a></li>
