--- a/src/projetIHM/gestionMairieBundle/Resources/views/Habite/ajouterHabite.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Habite/ajouterHabite.html.twig
@@ -1,55 +1,45 @@
-{# src/Sdz/BlogBundle/Resources/views/AjouterPersonne/ajouterPersonne.html.twig #}
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-    <title>AJOUTER LOGEMENT</title>
+{# src/Sdz/BlogBundle/Resources/views/AjouterPersonne/ajouterHabite.html.twig #}
 
 
-    <link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/bootstrap/css/bootstrap.css') }}" type="text/css" />
+{% extends 'projetIHMgestionMairieBundle::base.html.twig' %}
 
+{% block title%}Ajouter un emménagement{% endblock%}
 
-  </head>
+{% block body%}
 
-  <body>
-    <div class="container">
-      <div id="header" class="hero-unit">
-        <h1>Ajouter un logement</h1>
-        <p>Déstiné aux mairie afin de gerer les personnes.</p>
-      </div>
+<div class="container">
+  <div id="header" class="hero-unit">
+    <h1>Ajouter un emménagement</h1>
+    <p>Déstiné aux mairie afin de gerer les emménagement.</p>
+  </div>
 
-      <div class="row">
-        <div id="menu" class="span3" style="background-color:rgb(238,238,238);padding-left:2%;">
-          <h3>Accueil</h3>
-          <ul class="nav nav-pills nav-stacked">
-            <li><a href="{{path('gestion_mairie_homepage')}}">Accueil du Site</a></li>
-            <li><a href="{{path('gestion_mairie_logement')}}">Gerer les logements</a></li>
-          </ul>
-          
-          
-        </div>
+  <div class="row">
+    <div id="menu" class="span3" >
+      <h3>Accueil</h3>
+      <ul class="nav nav-pills nav-stacked">
+        <li><a href="{{path('gestion_mairie_homepage')}}">Accueil du Site</a></li>
+        <li><a href="{{path('gestion_mairie_logement')}}">Gerer les logements</a></li>
+      </ul>
       
-	<div id="content" class="span8">
-          {% block body %}
-	  <h3>Formulaire d'article</h3>
-	  <div class="well">
-	    <form method="post" {{ form_enctype(form) }}>
-	      {{ form_widget(form) }}
-	      <input type="submit" class="btn btn-primary" />
-	    </form>
-	  </div>
-          {% endblock %}
-        </div>
-      </div>
-
-      <hr>
-
-      <footer>
-        <p>Univ'Nantes © 2014.</p>
-      </footer>
+      
     </div>
+    
+    <div id="content" class="span8">
 
-  </body>
-</html>
+      <h3>Formulaire d'article</h3>
+      <div class="well">
+	<form method="post" {{ form_enctype(form) }}>
+	  {{ form_widget(form) }}
+	  <input type="submit" class="btn btn-primary" />
+	</form>
+      </div>
+    </div>
+  </div>
+
+  <hr>
+
+  <footer>
+    <p>Univ'Nantes © 2014.</p>
+  </footer>
+</div>
+{% endblock %}
