--- a/src/projetIHM/gestionMairieBundle/Resources/views/Logement/logement.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Logement/logement.html.twig
@@ -1,66 +1,50 @@
-{# src/Sdz/BlogBundle/Resources/views/AjouterPersonne/ajouterPersonne.html.twig #}
+{# src/Sdz/BlogBundle/Resources/views/AjouterPersonne/logement.html.twig #}
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+{% extends 'projetIHMgestionMairieBundle::base.html.twig' %}
 
-    <title>Liste des logements</title>
+{% block title%}Gérer les logements{% endblock%}
 
+{% block body%}
+<div class="container">
+  <div id="header" class="hero-unit">
+    <h1>Liste des logements</h1>
+    <p>Déstiné aux mairie afin de gerer les logements.</p>
+  </div>
 
-    <link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/bootstrap/css/bootstrap.css') }}" type="text/css" />
+  <div class="row">
+    <div id="menu" class="span3">
+      <h3>Accueil</h3>
+      <ul class="nav nav-pills nav-stacked">
+        <li><a href="{{path('gestion_mairie_homepage')}}">Accueil du Site</a></li>
+        <li><a href="{{path('gestion_mairie_ajouterLogement')}}">Ajouter un logement</a></li>
 
-
-
-   <link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/stylesheet.css') }}" type="text/css" />
-
-
-
-  </head>
-
-  <body>
-    <div class="container">
-      <div id="header" class="hero-unit">
-        <h1>Liste des logements</h1>
-        <p>Déstiné aux mairie afin de gerer les personnes.</p>
-      </div>
-
-      <div class="row">
-        <div id="menu" class="span3">
-          <h3>Accueil</h3>
-          <ul class="nav nav-pills nav-stacked">
-            <li><a href="{{path('gestion_mairie_homepage')}}">Accueil du Site</a></li>
-            <li><a href="{{path('gestion_mairie_ajouterLogement')}}">Ajouter un logement</a></li>
-
-	  </ul>
-          
-          
-        </div>
+      </ul>
       
-	<div id="content" class="span8">
-          {% block body %}
-          {% for logement in logements %}
-	  <table>
-	    <tr><td style="width: 500px;">{{logement.id }} - {{logement.numRue }} {{ logement.nomRue }} {{ logement.cp }} {{logement.ville}}</td><td></br><form action="{{ path('gestion_mairie_modifierLogement', {'id': logement.id}) }}" method="post">
-		    <input type="submit" value="modifier" class="btn btn-default" />
-   		  </form></td><td></br><form action="{{ path('gestion_mairie_modifierLogement', {'id': logement.id}) }}" method="post">
-		    <input type="submit" value="Supprimer" class="btn btn-danger" />
-   		  </form>  
-		  
-</td></tr>
-</table>
-	  {% endfor %}
-
-	  {% endblock %}
-        </div>
-      </div>
-
-      <hr>
-
-      <footer>
-        <p>Univ'Nantes © 2014.</p>
-      </footer>
+      
     </div>
+    
+    <div id="content" class="span8">
+      
+      {% for logement in logements %}
+      <table>
+	<tr><td style="width: 500px;">{{logement.id }} - {{logement.numRue }} {{ logement.nomRue }} {{ logement.cp }} {{logement.ville}}</td><td></br><form action="{{ path('gestion_mairie_modifierLogement', {'id': logement.id}) }}" method="post">
+	      <input type="submit" value="modifier" class="btn btn-default" />
+   	  </form></td><td></br><form action="{{ path('gestion_mairie_modifierLogement', {'id': logement.id}) }}" method="post">
+	      <input type="submit" value="Supprimer" class="btn btn-danger" />
+   	    </form>  
+	    
+	</td></tr>
+      </table>
+      {% endfor %}
 
-  </body>
-</html>
+
+    </div>
+  </div>
+
+  <hr>
+
+  <footer>
+    <p>Univ'Nantes © 2014.</p>
+  </footer>
+</div>
+{% endblock %}
