>>- 1.2 -<< _Gestion des langue 	-traduction dans translation en EN et FR

--- a/src/projetIHM/gestionMairieBundle/Resources/views/Accueil/index.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Accueil/index.html.twig
@@ -5,7 +5,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>Gestion de l'état civil</title>
+    <title>{{"Gestion de l'état civil"|trans}}</title>
 
     <link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/stylesheet.css') }}" type="text/css" />
 
@@ -18,19 +18,19 @@
   <body>
     <div class="container">
       <div id="header" class="hero-unit">
-        <h1>Gestion de l'état civil</h1>
-        <p>Déstiné aux mairie afin de gerer les personnes.</p>
+        <h1>{{"Gestion de l'état civil"|trans}}</h1>
+        <p>{{'Déstiné aux mairie afin de gerer les personnes.'|trans}}</p>
       </div>
 
       <div class="row">
         <div id="menu" class="span3">
-          <h3>Accueil</h3>
+          <h3>{{'Accueil'|trans}}</h3>
           <ul class="nav nav-pills nav-stacked">
-            <li><a href="{{path('gestion_mairie_homepage')}}">Accueil du Site</a></li>
-            <li><a href="{{path('gestion_mairie_personne')}}">Gerer les personnes</a></li>
-	    <li><a href="{{path('gestion_mairie_mariage')}}">Gérer les mariages</a></li>
-	    <li><a href="{{path('gestion_mairie_logement')}}">Gérer les logements</a></li>
-	    <li><a href="{{path('gestion_mairie_habite')}}">Gérer les em(dé)ménagements</a></li>
+            <li><a href="{{path('gestion_mairie_homepage')}}">{{'Accueil du Site'|trans}}</a></li>
+            <li><a href="{{path('gestion_mairie_personne')}}">{{'Gerer les personnes'|trans}}</a></li>
+	    <li><a href="{{path('gestion_mairie_mariage')}}">{{'Gérer les mariages'|trans}}</a></li>
+	    <li><a href="{{path('gestion_mairie_logement')}}">{{'Gérer les logements'|trans}}</a></li>
+	    <li><a href="{{path('gestion_mairie_habite')}}">{{'Gérer les em(dé)ménagements'|trans}}</a></li>
           </ul>
           
           
@@ -44,7 +44,6 @@ SALUT
       </div>
 
       <hr>
-
       <footer>
         <p>Univ'Nantes © 2014.</p>
       </footer>
