--- a/src/projetIHM/gestionMairieBundle/Resources/views/Habite/ajouterHabite.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Habite/ajouterHabite.html.twig
@@ -9,16 +9,16 @@
 
 <div class="container">
   <div id="header" class="hero-unit">
-    <h1>Ajouter un emménagement</h1>
-    <p>Déstiné aux mairie afin de gerer les emménagement.</p>
+    <h1>{{'Ajouter un emménagement'|trans}}</h1>
+    <p>{{'Déstiné aux mairie afin de gerer les emménagement.'|trans}}</p>
   </div>
 
   <div class="row">
     <div id="menu" class="span3" >
-      <h3>Accueil</h3>
+      <h3>{{'Accueil'|trans}}</h3>
       <ul class="nav nav-pills nav-stacked">
-        <li><a href="{{path('gestion_mairie_homepage')}}">Accueil du Site</a></li>
-        <li><a href="{{path('gestion_mairie_logement')}}">Gerer les logements</a></li>
+        <li><a href="{{path('gestion_mairie_homepage')}}">{{'Accueil du Site'|trans}}</a></li>
+        <li><a href="{{path('gestion_mairie_logement')}}">{{'Gerer les logements'|trans}}</a></li>
       </ul>
       
       
@@ -26,7 +26,7 @@
     
     <div id="content" class="span8">
 
-      <h3>Formulaire d'article</h3>
+      <h3>{{'Formulaire de foyer'|trans}}</h3>
       <div class="well">
 	<form method="post" {{ form_enctype(form) }}>
 	  {{ form_widget(form) }}
