--- a/src/projetIHM/gestionMairieBundle/Resources/views/Mariage/ajouterMariage.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Mariage/ajouterMariage.html.twig
@@ -8,24 +8,24 @@
 
 <div class="container">
   <div id="header" class="hero-unit">
-    <h1>Ajouter un mariage</h1>
-    <p>Déstiné aux mairie afin de gerer les mariages.</p>
+    <h1>{{'Ajouter un mariage'|trans}}</h1>
+    <p>{{'Déstiné aux mairie afin de gerer les mariages.'|trans}}</p>
   </div>
 
   <div class="row">
     <div id="menu" class="span3">
-      <h3>Accueil</h3>
+      <h3>{{'Accueil'|trans}}</h3>
       <ul class="nav nav-pills nav-stacked">
-        <li><a href="{{path('gestion_mairie_homepage')}}">Accueil du Site</a></li>
-        <li><a href="{{path('gestion_mairie_ajouterPersonne')}}">Ajouter une personne</a></li>
-	<li><a href="{{path('gestion_mairie_mariage')}}">Gérer les mariages</a></li>
+        <li><a href="{{path('gestion_mairie_homepage')}}">{{'Accueil du Site'|trans}}</a></li>
+        <li><a href="{{path('gestion_mairie_ajouterPersonne')}}">{{'Ajouter une personne'|trans}}</a></li>
+	<li><a href="{{path('gestion_mairie_mariage')}}">{{'Gérer les mariages'|trans}}</a></li>
       </ul>
       
       
     </div>
     
     <div id="content" class="span8">
-      <h3>Formulaire de mariage</h3>
+      <h3>{{'Formulaire de mariage'|trans}}</h3>
       <div class="well">
 	<form method="post" {{ form_enctype(form) }}>
 	  {{ form_widget(form) }}
