--- a/src/projetIHM/gestionMairieBundle/Resources/views/Personne/personne.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Personne/personne.html.twig
@@ -7,16 +7,16 @@
 {% block body%}
     <div class="container">
       <div id="header" class="hero-unit">
-        <h1>Liste des personnes</h1>
-        <p>Déstiné aux mairie afin de gerer les personnes.</p>
+        <h1>{{'Liste des personnes'|trans}}</h1>
+        <p>{{'Déstiné aux mairie afin de gerer les personnes.'|trans}}</p>
       </div>
 
       <div class="row">
         <div id="menu" class="span3">
-          <h3>Accueil</h3>
+          <h3>{{'Accueil'|trans}}</h3>
           <ul class="nav nav-pills nav-stacked">
-            <li><a href="{{path('gestion_mairie_homepage')}}">Accueil du Site</a></li>
-            <li><a href="{{path('gestion_mairie_ajouterPersonne')}}">Ajouter une personne</a></li>
+            <li><a href="{{path('gestion_mairie_homepage')}}">{{'Accueil du Site'|trans}}</a></li>
+            <li><a href="{{path('gestion_mairie_ajouterPersonne')}}">{{'Ajouter une personne'|trans}}</a></li>
 	  </ul>
           
           
@@ -26,7 +26,7 @@
           
           {% for personne in personnes %}
 	  <table>
-	    <tr><td style="width: 500px;">{{personne.Nsecu }} - {{personne.nom }} {{ personne.prenom }} né le {{ personne.dateNai|date('Y-m-d') }} à {{ personne.villeNai }}</td><td></br><form action="{{ path('gestion_mairie_modifierPersonne', {'id': personne.id}) }}" method="post">
+	    <tr><td style="width: 500px;">{{personne.Nsecu }} - {{personne.nom }} {{ personne.prenom }} {{'né le'|trans}} {{ personne.dateNai|date('Y-m-d') }} à {{ personne.villeNai }}</td><td></br><form action="{{ path('gestion_mairie_modifierPersonne', {'id': personne.id}) }}" method="post">
 		    <input type="submit" value="modifier" class="btn btn-default" />
    		  </form></td><td></br><form action="{{ path('gestion_mairie_supprimerPersonne', {'id': personne.id}) }}" method="post">
 		    <input type="submit" value="Supprimer" class="btn btn-danger" />
